<resources>
    <string name="app_name">新葡京</string>
    <string name="login_account_txt">账号</string>
    <string name="login_pwd_txt">密码</string>
    <string name="login_account_hint">请输入手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="title_activity_base_titled">BaseTitledActivity</string>
    <string name="income_item_coin">金币：</string>
    <string name="title_activity_my_fans">MyFansActivity</string>
    <string name="live_item_during">时长：</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_my_fan_contributions">粉丝贡献榜</string>
    <string name="fanContr_coin">贡献：%d</string>

    <!--startlive -->
    <string name="startLive_room_covor_hint">上传封面</string>
    <string name="startLive_roomName_hint">请输入直播标题</string>
    <string name="startLive_roomStyle_hint">请选择直播风格</string>
    <string name="startLive_room_charge_hint">房间收费</string>
    <string name="startLive_room_charge_et_hint">设置收费金额</string>
    <string name="startLive_room_encryption_hint">私密直播</string>
    <string name="startLive_room_pwd_hint">设置6位数房间密码</string>
    <string name="startLive_room_num_hint">设置可观看人数(不填为无上限)</string>
    <string name="startLive_btn_start">开始直播</string>


    <!-- liveEnd-->
    <string name="liveEnd_tv_end">直播已结束</string>
    <string name="liveEnd_tv_during">直播时长：%s</string>
    <string name="liveEnd_btn_exit">退出</string>
    <string name="liveEnd_tv_num">观看人数</string>
    <string name="liveEnd_tv_coin">新增金币</string>
    <string name="liveEnd_tv_fans">新增粉丝</string>
    <string name="liveEnd_tv_like">喜欢</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
