<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/base_padding"
    android:gravity="center_horizontal"
    android:background="@color/general_bg_black"
    tools:context="toolbox.ll.com.toolbox.ui.live.LiveEndActivity">
    <toolbox.ll.com.common.widget.CircleImageView
        android:id="@+id/liveEnd_iv_avatar"
        android:layout_width="@dimen/liveEnd_avatar_size"
        android:layout_height="@dimen/liveEnd_avatar_size"
        style="@style/base_margin_vertical"
        android:src="@drawable/ic_avatar_default"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liveEnd_tv_end"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"/>
    <TextView
        android:id="@+id/liveEnd_tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liveEnd_tv_during"
        android:layout_marginTop="@dimen/margin"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_size_large"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        style="@style/base_padding"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50000"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liveEnd_tv_num"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/fontGrayLight"
                android:textSize="@dimen/font_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50000"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liveEnd_tv_coin"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/fontGrayLight"
                android:textSize="@dimen/font_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50000"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liveEnd_tv_fans"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/fontGrayLight"
                android:textSize="@dimen/font_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50000"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liveEnd_tv_like"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/fontGrayLight"
                android:textSize="@dimen/font_size"/>
        </LinearLayout>
    </GridLayout>

    <Button
        android:id="@+id/liveEnd_btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/login_button"
        android:layout_marginTop="@dimen/margin_larger"
        android:text="@string/liveEnd_btn_exit"/>

</LinearLayout>
