<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/base_padding"
    android:background="@drawable/ic_effect_brooklyn"
    tools:context="toolbox.ll.com.toolbox.ui.live.StartLiveActivity">
    <ImageView
        android:id="@+id/startLive_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_no_bg"
        android:layout_alignParentRight="true"
        />
    <LinearLayout
        android:id="@+id/startLive_layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/startLive_iv_close"
        android:layout_centerInParent="true"
        style="@style/base_padding"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/startLive_tv_cover"
            android:layout_width="@dimen/startLive_covor_size"
            android:layout_height="@dimen/startLive_covor_size"
            android:background="@drawable/dashad_border_white"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/startLive_room_covor_hint"
            />

        <EditText
            android:id="@+id/startLive_et_roomName"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/startLive_roomName_hint"
            android:textColor="@color/hint"
            android:layout_marginTop="@dimen/margin_larger"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"/>

        <EditText
            android:id="@+id/startLive_et_roomStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/startLive_roomStyle_hint"
            android:textColor="@color/hint"
            android:textAlignment="center"
            android:textSize="@dimen/font_size"
            android:layout_marginTop="@dimen/margin_larger"/>
        <CheckBox
            android:id="@+id/startLive_cb_room_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startLive_room_charge_hint"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_larger"
            android:button="@null"
            android:background="@null"
            android:drawableLeft="@drawable/checkbox_def"
            android:drawablePadding="@dimen/padding_small"
           />
        <EditText
            android:id="@+id/startLive_et_room_charge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/startLive_roomStyle_hint"
            android:textColor="@color/hint"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_small"
            android:layout_marginTop="@dimen/margin_larger"/>
        <CheckBox
            android:id="@+id/startLive_cb_room_cencryption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startLive_room_encryption_hint"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_larger"
            android:button="@null"
            android:background="@null"
            android:drawableLeft="@drawable/checkbox_def"
            android:drawablePadding="@dimen/padding_small" />
        <LinearLayout
            android:id="@+id/startLive_layout_room_encryption"
            android:layout_width="match_parent"
            android:layout_height="@dimen/startLive_input_height"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_larger">
            <EditText
                android:id="@+id/startLive_et_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/startLive_roomStyle_hint"
                android:textColor="@color/hint"
                android:textColorHint="@color/hint"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/margin"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_small"
                android:background="@drawable/bg_input_gray_default"/>
            <EditText
                android:id="@+id/startLive_et_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/startLive_roomStyle_hint"
                android:textColor="@color/hint"
                android:layout_weight="1"
                android:textColorHint="@color/hint"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_small"
                android:background="@drawable/bg_input_gray_default"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/startLive_btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/login_button"
        android:text="@string/startLive_btn_start"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
